deploy/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dailycookies
  labels:
    app: dailycookies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dailycookies
  template:
    metadata:
      labels:
        app: dailycookies
    spec:
      containers:
      - name: dailycookies
        image: boomzero/dailycookies:latest
        resources:
          requests:
            cpu: 100m
            memory: 125Mi
          limits:
            cpu: 250m
            memory: 125Mi
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regcred
