deploy/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dailycookies
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: dailycookies
