deploy/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "web.dailycookie.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: dailycookies
          servicePort: 80
